@@ -36,6 +36,12 @@ namespace PLInput {
 
 
 //[-------------------------------------------------------]
+//[ Class implementation                                  ]
+//[-------------------------------------------------------]
+pl_implement_class(Control)
+
+
+//[-------------------------------------------------------]
 //[ Public functions                                      ]
 //[-------------------------------------------------------]
 /**
