@@ -34,6 +34,12 @@ namespace PLInput {
 
 
 //[-------------------------------------------------------]
+//[ Class implementation                                  ]
+//[-------------------------------------------------------]
+pl_implement_class(LED)
+
+
+//[-------------------------------------------------------]
 //[ Public functions                                      ]
 //[-------------------------------------------------------]
 /**
