@@ -14,8 +14,9 @@
 \include{ScriptBackends}
 \include{ScriptBindings}
 \include{RTTIClasses_PLCore}
-\include{RTTIClasses_PLGui}
+\include{RTTIClasses_PLInput}
 \include{RTTIClasses_PLScene}
+\include{RTTIClasses_PLGui}
 \include{RTTIClasses_PLEngine}
 \input{../Common/Contact}	% "input" instead of "include" is used to avoid problems with write permissions during TeX processing
 
