@@ -1,0 +1,98 @@
+\chapter{PLInput RTTI classes}
+
+
+
+
+\section{PLInput::Control class}
+
+
+\subsection{Methods}
+
+\paragraph{<RTTI object> GetController()}
+Write \emph{<RTTI object>:GetController()} in order to receive the controller that owns the control, can be a null pointer.
+
+\paragraph{<EControlType enum> GetType()}
+Write \emph{<RTTI object>:GetType()} in order to receive the type of control.
+
+\paragraph{<bool> IsInputControl()}
+Write \emph{<RTTI object>:IsInputControl()} in order to check if control is input or output control. Returns \emph{true} if control is input control, \emph{false} if output.
+
+\paragraph{<string> GetName()}
+Write \emph{<RTTI object>:GetName()} in order to receive the control name.
+
+\paragraph{<string> GetDescription()}
+Write \emph{<RTTI object>:GetDescription()} in order to receive the control description.
+
+
+
+
+\section{PLInput::Axis class}
+
+
+\subsection{Methods}
+
+\paragraph{<float> GetValue()}
+Write \emph{<RTTI object>:GetValue()} in order to receive the axis value.
+
+\paragraph{SetValue(<float>, <bool>)}
+Write \emph{<RTTI object>:SetValue(<float>, <bool>)} in order to set the axis value. Current value as first parameter. As second parameter \emph{true} if the current value is relative, else \emph{false} if it's a absolute value.
+
+\paragraph{<bool> IsValueRelative()}
+Write \emph{<RTTI object>:IsValueRelative()} in order to check whether or not the value is relative. Returns \emph{true} if the current value is relative, else \emph{false} if it's a absolute value.
+
+
+
+
+\section{PLInput::Button class}
+
+
+\subsection{Methods}
+
+\paragraph{<char> GetCharacter()}
+Write \emph{<RTTI object>:GetCharacter()} in order to receive the character associated with the button, \emph{\\0} if none.
+
+\paragraph{<bool> IsPressed()}
+Write \emph{<RTTI object>:IsPressed()} in order to check whether or not the button is currently pressed. Returns \emph{true}, if the button is currently pressed, else \emph{false}.
+
+\paragraph{SetPressed(<bool>)}
+Write \emph{<RTTI object>:SetPressed(<bool>)} in order to set the button status. \emph{true} as first parameter, if the button is pressed, else \emph{false}.
+
+\paragraph{<bool> IsHit()}
+Write \emph{<RTTI object>:IsHit()} in order to check whether or not the button was just hit. Returns \emph{true}, if the button has been hit since the last call of this function, else \emph{false}. This will return the hit-state of the button and also reset it immediatly (so the next call to \emph{IsHit()} will return \emph{false}). If you only want to check, but not reset the hit-state of a button, you should call \emph{CheckHit()}.
+
+\paragraph{<float> CheckHit()}
+Write \emph{<RTTI object>:GetValue()} in order to check if the button has been hit. \emph{true} as first parameter, if the button has been hit since the last call of this function, else \emph{false}. This function will NOT reset the hit-state after being called (see \emph{IsHit()}).
+
+
+
+
+\section{PLInput::Effect class}
+
+
+\subsection{Methods}
+
+\paragraph{<float> GetValue()}
+Write \emph{<RTTI object>:GetValue()} in order to receive the current value.
+
+\paragraph{SetValue(<float>)}
+Write \emph{<RTTI object>:SetValue(<float>)} in order to set the effect value. Current value as first parameter.
+
+
+
+
+\section{PLInput::LED class}
+
+
+\subsection{Methods}
+
+\paragraph{<integer> GetLEDs()}
+Write \emph{<RTTI object>:GetLEDs()} in order to receive the state of all LEDs as a bitfield.
+
+\paragraph{SetLEDs(<integer>)}
+Write \emph{<RTTI object>:SetLEDs(<integer>)} in order to set state of all LEDs as a bitfield. LED states as first parameter.
+
+\paragraph{<bool> IsOn()}
+Write \emph{<RTTI object>:IsOn()} in order to receive the LED status. Index of LED (0..31) as first parameter. Returns \emph{true} if the LED is currently on, else \emph{false}.
+
+\paragraph{SetOn(<integer>)}
+Write \emph{<RTTI object>:SetOn(<integer>)} in order to set the LED status. Index of LED (0..31) as first parameter. \emph{true} as second parameter, if the LED is on, else \emph{false}.
